--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"coffee-script": "*",
 		"commander": "*",
 		"asyncmachine": "*",
-		"suspend": "*"
+		"suspend": "*",
+		"async": "*"
 	},
 	"devDependencies": {
 		"mocha": "*",
