--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
 	"keywords": ["coffeescript", "typescript", "types", "compiler", "builder"],
 	"description": "CompiledCoffee marries CoffeeScript with TypeScript's type system via the definition files.",
 	"engines": {"node": ">=0.11"},
+	"directories": {"bin": "bin/"},
+	"scripts": {"test": "make test"},
 	"dependencies": {
 		"coffee-script-to-typescript": "TobiaszCudnik/coffeescript-to-typescript",
 		"typescript": "latest",
