examples refactorings yield support

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"sugar": "latest",
 		"glob": "latest",
 		"browserify": "latest",
-		"writestreamp": "latest"
+		"writestreamp": "latest",
+		"typescript-yield": "latest"
 	},
 	"repository": "TobiaszCudnik/compiled-coffee",
 	"devDependencies": {
