--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "compiled-coffee",
 	"author": "Tobiasz Cudnik <tobiasz.cudnik@gmail.com>",
-	"version": "0.1.2",
+	"version": "0.1.3",
 	"keywords": ["coffeescript", "typescript", "types", "compiler", "builder"],
-	"description": "CompiledCoffee marries CoffeeScript with TypeScript's type system via the definition files.",
+	"description": "CompiledCoffee combines CoffeeScript with TypeScript's type system via the definition files.",
 	"engines": {"node": ">=0.11"},
 	"directories": {"bin": "bin/"},
 	"scripts": {"test": "make test"},
