--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"directories": {"bin": "bin/"},
 	"scripts": {"test": "make test"},
 	"dependencies": {
-		"coffee-script-to-typescript": "TobiaszCudnik/coffeescript-to-typescript@almost-master",
+		"coffee-script-to-typescript": "TobiaszCudnik/coffeescript-to-typescript#almost-master",
 		"typescript": "latest",
 		"commander": "latest",
 		"suspend": "latest",
