--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"directories": {"bin": "bin/"},
 	"scripts": {"test": "make test"},
 	"dependencies": {
+		"coffee-script-to-typescript": "TobiaszCudnik/coffeescript-to-typescript#almost-master",
 		"typescript": "latest",
 		"commander": "latest",
 		"suspend": "latest",
@@ -19,7 +20,7 @@
 	},
 	"repository": "TobiaszCudnik/compiled-coffee",
 	"devDependencies": {
-		"coffee-script-to-typescript": "TobiaszCudnik/coffeescript-to-typescript#almost-master",
+		"coffeescript-generators": "almost/coffee-script",
 		"mocha": "latest",
 		"expect.js": "latest"
 	}
